--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -72,8 +72,24 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/screen_time_widget"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/glassmorphism_on"
+            android:orientation="vertical"
+            android:padding="@dimen/size_16"
+            android:layout_marginTop="@dimen/size_16">
+
+
+            <include
+                layout="@layout/switch_icon_setting_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_24" />
+
+        </LinearLayout>
+
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/glassmorphism_on"
@@ -101,19 +117,16 @@
                     layout="@layout/more_options_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_24"
-                    android:layout_marginStart="@dimen/size_32"/>
+                    android:layout_marginTop="@dimen/size_24"/>
 
                 <include
                     android:id="@+id/select_color_theme"
                     layout="@layout/more_options_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_16"
-                    android:layout_marginStart="@dimen/size_32"/>
+                    android:layout_marginTop="@dimen/size_24"/>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,11 +136,19 @@
                 android:orientation="vertical"
                 android:padding="@dimen/size_16">
 
+
+                <include
+                    android:id="@+id/about_us"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
                 <include
                     android:id="@+id/review"
                     layout="@layout/horizontal_icon_text_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24"/>
 
                 <include
                     android:id="@+id/share_app"
@@ -150,15 +171,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_24" />
 
-                <include
-                    android:id="@+id/about_us"
-                    layout="@layout/horizontal_icon_text_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_24" />
-
             </LinearLayout>
-
 
         </LinearLayout>
 
