--- a/app/src/main/res/layout/fragment_app_drawer.xml
+++ b/app/src/main/res/layout/fragment_app_drawer.xml
@@ -62,7 +62,7 @@
         android:id="@+id/alphabet_index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="center"
         android:gravity="center"
         android:paddingHorizontal="@dimen/size_6"
         android:paddingVertical="@dimen/size_15"
