--- a/app/src/main/res/layout/icon_switch_setting_item.xml
+++ b/app/src/main/res/layout/icon_switch_setting_item.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/title"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/text_size_16"
         android:layout_marginStart="@dimen/size_8"
         android:fontFamily="@font/montserrat_medium"
