--- a/app/src/main/res/layout/icon_title_item_layout.xml
+++ b/app/src/main/res/layout/icon_title_item_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imgIcon"
         android:layout_width="@dimen/size_40"
         android:layout_height="@dimen/size_40"
+        android:layout_marginEnd="@dimen/size_16"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
@@ -19,7 +20,6 @@
         android:textSize="@dimen/text_size_16"
         android:gravity="center"
         android:maxLines="1"
-        android:layout_marginStart="@dimen/size_16"
         android:ellipsize="end"
         android:layout_gravity="center"
         android:textColor="@color/white"
