--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -72,30 +72,13 @@
 
             </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/glassmorphism_on"
-            android:orientation="vertical"
-            android:padding="@dimen/size_16"
-            android:layout_marginTop="@dimen/size_16">
-
-
-            <include
-                layout="@layout/switch_icon_setting_item"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_24" />
-
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_16"
                 android:background="@drawable/glassmorphism_on"
                 android:orientation="vertical"
-                android:padding="@dimen/size_16"
-                android:layout_marginTop="@dimen/size_16">
+                android:padding="@dimen/size_16">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -117,14 +100,15 @@
                     layout="@layout/more_options_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_24"/>
+                    android:layout_marginTop="@dimen/size_24" />
 
                 <include
                     android:id="@+id/select_color_theme"
                     layout="@layout/more_options_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_24"/>
+                    android:layout_marginTop="@dimen/size_24"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
@@ -148,7 +132,7 @@
                     layout="@layout/horizontal_icon_text_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_24"/>
+                    android:layout_marginTop="@dimen/size_24" />
 
                 <include
                     android:id="@+id/share_app"
