--- a/app/src/main/res/layout/bottom_sheet_app_drawer_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_app_drawer_settings.xml
@@ -68,11 +68,54 @@
 
     </RadioGroup>
 
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_1"
+        android:layout_margin="@dimen/size_16"
+        android:background="@color/grey_300"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+    <LinearLayout
+        android:id="@+id/ll_main_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_16"
+        android:layout_marginTop="@dimen/size_16"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <ImageView
+            android:layout_width="@dimen/size_28"
+            android:layout_height="@dimen/size_28"
+            android:layout_marginStart="@dimen/size_2"
+            android:src="@drawable/icon_settings"
+            app:tint="@color/blue_500" />
+
+        <TextView
+            style="@style/headlineMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/size_16"
+            android:text="Launcher Settings"
+            android:textColor="@color/blue_500" />
+
+    </LinearLayout>
+
     <Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_30"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_main_settings" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
