--- a/app/src/main/res/drawable/stroke_rounded_bg.xml
+++ b/app/src/main/res/drawable/stroke_rounded_bg.xml
@@ -3,4 +3,5 @@
 
     <corners android:radius="@dimen/size_16"/>
     <stroke android:color="@color/blue_500" android:width="@dimen/size_1"/>
+    <solid android:color="@color/white" />
 </shape>
