--- a/app/src/main/res/layout/dialog_select_time_limit.xml
+++ b/app/src/main/res/layout/dialog_select_time_limit.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/size_16"
-        android:background="@drawable/rounded_bg"
+        android:background="@drawable/stroke_rounded_bg"
         android:orientation="vertical"
         android:padding="@dimen/size_16"
         app:layout_constraintBottom_toBottomOf="parent"
