--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,10 +19,10 @@
         <item name="android:layout_height">@dimen/size_56</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/button_text_size</item>
-        <item name="textAllCaps">false</item>
-        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:gravity">center</item>
-        <item name="drawableTint">@color/white</item>
+        <item name="android:background">@drawable/primary_container</item>
         <item name="android:stateListAnimator">@null</item>
     </style>
 
